# ENPM663_Assignment2

./: README.md
enpm663_group1_ariac/: README.md
enpm663_group1_ariac/group1_ariac/: CMakeLists.txt  package.xml
enpm663_group1_ariac/group1_ariac/config/: group1_sensor.yaml
enpm663_group1_ariac/group1_ariac/etc/: readme.txt
enpm663_group1_ariac/group1_ariac/group1_ariac/: check_competition_status_interface.py  retrieve_orders_interface.py
enpm663_group1_ariac/group1_ariac/include/group1_ariac/: group1_ariac.hpp
enpm663_group1_ariac/group1_ariac/script/: check_competition_status.py  retrieve_orders.py
enpm663_group1_ariac/group1_ariac/src/: group1_ariac.cpp
