<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group1_ariac</name>
  <version>0.0.0</version>
  <description>ENPM663 (Spring 2025) RWA2: Group1_Package</description>
  <maintainer email="aliebers@umd.edu">Anne-Michelle Lieberson</maintainer>
  <maintainer email="rcyprien@umd.edu">Robens Midy Cyprien</maintainer>
  <maintainer email="rhamsaa@umd.edu">Hamsaavarthan Ravichandar</maintainer>
  <maintainer email="mdesai01@umd.edu">Manas Desai</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ariac_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
